[FLINK-15633][build] Bump javadoc-plugin to 3.1.1